--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
 .App {
   text-align: center;
+  background-color: rgb(6, 8, 36);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App-wrapper {
+  width: 80vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  margin: 0 auto;
+  
+}
+.header {
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.header__logo {
+  width: 3rem;
+  height: 3rem;
+  margin-right: 5rem;
+}
+.header__logo img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  transform: rotateZ(0deg);
+  transition: transform 0.6s ease;
+}
+.header__logo img:hover {
+  transform: rotateZ(180deg);
+  transition: transform 0.6s ease;
+}
+.header__nav {
+  display: flex;
+  gap: 5rem;
+  align-items: center;
+}
+.nav__link {
+  color: #fff;
+}
+h1 {
   color: white;
+  font-size: 35px;
+}
+.pic_of_day {
+  margin: 1.5rem 0;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  align-items: center;
+}
+.explanation {
+  color: white;
+  display: block;
+  max-width: 50%;
+  line-height: 2.5rem;
+}
+.astro-photo__main {
+  height: 70vh;
+}
+.astro-photo__main img {
+  width: 100%;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.slide-pic {
+  display: block;
+  width: 100%;
+  height: 300px;
+  border-radius: 5px;
+  transform: scale(1);
+  transition: transform 0.5s linear;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.slide-pic:hover {
+  transform: scale(1.1);
+}
+.astro-galery {
+  width: 20rem;
+  border-radius: 5px;
+  margin: 0 auto;
+  padding: 1%;
+  background-color: #241a7fa1;
+  
+}
+.swiper__container {
+  margin: 2rem 0;
+  width: 95%;
+  padding: 0 2rem;
 }
